added express and other dependencies

--- a/package.json
+++ b/package.json
@@ -1,12 +1,28 @@
 {
-  "name": "coursera2",
+  "name": "coursera1",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "demonicirfan",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/demonicirfan/coursera-new.git"
+  },
+  "keywords": [
+    "coursera"
+  ],
+  "bugs": {
+    "url": "https://github.com/demonicirfan/coursera-new/issues"
+  },
+  "homepage": "https://github.com/demonicirfan/coursera-new#readme",
+  "description": "",
+  "dependencies": {
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.12"
+  }
 }
