--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "url": "https://github.com/demonicirfan/coursera-new/issues"
   },
   "homepage": "https://github.com/demonicirfan/coursera-new#readme",
-  "description": "",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.12"
-  }
+  },
+  "description": ""
 }
